# udf_op

./: .gitignore  CMakeLists.txt  compression.sh  fpl20_results.xlsx  krnl_udf_ml.cfg  krnl_udf_olap.cfg  krnl_udf_selection.cfg  run.sh  sim_udf.tcl
cfg/: cfg_gen_ml.py  cfg_gen_olap.py  cfg_gen_selection.py  eda.py  hw_resource.xlsx  krnl_udf_ml.cfg  krnl_udf_ml.csv  krnl_udf_ml_1.cfg  krnl_udf_ml_10.cfg  krnl_udf_ml_11.cfg  krnl_udf_ml_12.cfg  krnl_udf_ml_13.cfg  krnl_udf_ml_14.cfg  krnl_udf_ml_15.cfg  krnl_udf_ml_16.cfg  krnl_udf_ml_2.cfg  krnl_udf_ml_3.cfg  krnl_udf_ml_4.cfg  krnl_udf_ml_5.cfg  krnl_udf_ml_6.cfg  krnl_udf_ml_7.cfg  krnl_udf_ml_8.cfg  krnl_udf_ml_9.cfg  krnl_udf_olap.cfg  krnl_udf_olap.csv  krnl_udf_olap_06.cfg  krnl_udf_olap_1.cfg  krnl_udf_olap_10.cfg  krnl_udf_olap_11.cfg  krnl_udf_olap_12.cfg  krnl_udf_olap_2.cfg  krnl_udf_olap_3.cfg  krnl_udf_olap_4.cfg  krnl_udf_olap_5.cfg  krnl_udf_olap_6.cfg  krnl_udf_olap_7.cfg  krnl_udf_olap_8.cfg  krnl_udf_olap_9.cfg  krnl_udf_selection.cfg  krnl_udf_selection.csv  (+21 more)
src/: hbm_column.hpp  krnl_udf_ml.cpp  krnl_udf_ml.h  krnl_udf_ml_misc.hpp  krnl_udf_olap.cpp  krnl_udf_olap.h  krnl_udf_olap_misc.hpp  krnl_udf_selection.cpp  krnl_udf_selection.h  tb_udf_ml.cpp  tb_udf_olap.cpp  tb_udf_selection.cpp  types.h  udf_ml.cpp  udf_ml.hpp  udf_ml_dataset.hpp  udf_ml_models.hpp  udf_olap.cpp  udf_selection.cpp  udf_selection_clib.cpp
